# ai-billing

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml  verify_system.py
alembic/: env.py
alembic/versions/: 44fe2a4f59b4_initial_schema.py
app/: main.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: admin.py  api_keys.py  auth.py  billing.py  demo.py  usage.py
app/core/: config.py  redis.py  security.py
app/crud/: crud_api_key.py  crud_user.py
app/db/: base.py  session.py
app/middleware/: rate_limit.py  usage_tracker.py
app/models/: billing.py  organization.py  usage.py  user.py
app/schemas/: api_key_schema.py  user_schema.py
app/services/: ai_service.py  billing_service.py
